--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.cassandra.schema-action=NONE
 #indicates that we do not want our database to be created or recreated on startup. 
 spring.cassandra.connection.connect-timeout=PT10S
 spring.cassandra.connection.init-query-timeout=PT10S
+# GitHub OAuth2 Client Registration
+spring.security.oauth2.client.registration.github.client-id=Ov23livB6voSSUBDfQA2
+spring.security.oauth2.client.registration.github.client-secret=289bf11b5d62438efed3853ce46478d0979e9ee9
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
+spring.security.oauth2.client.registration.github.redirect-uri=http://localhost:8080/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.client-name=GitHub
