--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "cSpell.words": [
         "classpath",
+        "clsx",
         "Configurer",
+        "Connexion",
         "datacenter",
         "Keyspace",
         "populator"
